# thl-patcher

./: Cargo.toml  LICENSE  README.md  config.yaml  source.yaml
crates/patch-creator/: Cargo.toml
crates/patch-creator/src/: file_selectors.rs  main.rs
crates/patcher-cli/: Cargo.toml
crates/patcher-cli/src/: main.rs
crates/patcher-common/: Cargo.toml
crates/patcher-common/src/: download.rs  error.rs  lib.rs
crates/patcher-common/src/structures/: config.rs  source.rs
crates/patcher-gui/: Cargo.toml
crates/patcher-gui/src/: error.rs  main.rs  transmitter_reloader.rs
crates/patcher-gui/src/structures/: source.rs
crates/patcher-gui/src/ui/: global_error.rs  mod.rs  patcher.rs
crates/patcher-lib/: Cargo.toml
crates/patcher-lib/src/: lib.rs
crates/patcher-terminal/: Cargo.toml
crates/patcher-terminal/src/: main.rs
src/: lib.rs
