[package]
name = "thl-patcher"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.49", optional = true, features = ["derive"] }
ddelta = "0.2.1"
eframe = { version = "0.33.0", features = ["wgpu"], optional = true }
rfd = { version = "0.15.4", optional = true }
rustyline = "17.0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
sha2 = "0.10.9"
shellexpand = { version = "3.1.1", default-features = false, features = ["base-0", "tilde"] }
tempfile = "3.23.0"
walkdir = "2.5.0"
xz2 = "0.1.7"

[profile.production]
inherits = "release"
strip = true
lto = true
codegen-units = 1

[[bin]]
name = "patcher"
required-features = ["graphic"]

[[bin]]
name = "cli-tool"
required-features = ["cli"]

[features]
cli = ["dep:clap"]
graphic = ["dep:eframe","dep:rfd"]
