[package]
name = "patch-creator"
version = "0.1.0"
edition = "2024"

[dependencies]
base16ct = "0.3.0"
eframe = { version = "0.33.0", features = ["wgpu"] }
rfd = "0.15.4"
thl-patcher = { version = "0.1.0", path = "../patcher-lib" }
walkdir = "2.5.0"
tempfile = "3.23.0"
tar = "0.4.44"
flate2 = "1.1.4"
