[package]
name = "thl-patcher"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.49", optional = true, features = ["derive"] }
ddelta = "0.2.1"
rustyline = "17.0.2"
tempfile = "3.23.0"
walkdir = "2.5.0"
xz2 = "0.1.7"

[[bin]]
name = "cli-tool"
required-features = ["cli"]

[features]
cli = ["dep:clap"]