[package]
name = "thl-patcher"
version = "0.1.0"
edition = "2024"

[dependencies]
ddelta = { git = "https://github.com/lights0123/ddelta-rs", rev = "9b7cef19ee1513aabdae95f32a888a73a5a79b80", default-features = false }
thiserror = "2.0.17"
tracing = "0.1.41"
tar = { version = "0.4.44" }
tempfile = { version = "3.23.0", optional = true }
walkdir = { version = "2.5.0", optional = true }

[features]
default = ["patch", "diff"]
patch = []
diff = ["ddelta/diff", "dep:walkdir", "dep:tempfile"]